fix: album preview z-index error

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -141,6 +141,6 @@
 
   to {
     transform: translateY(0);
-    opacity: 100;
+    opacity: 1;
   }
 }
